k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
     labels:
      app: frontend
    spec:
     containers:
     - name: frontend
       image: k8s-demo-shop-frontend:proxy-v1
       imagePullPolicy: Never
       ports:
       - containerPort: 80
