k8s/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
       app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: Never

          ports:
            - containerPort: 6379
              
          volumeMounts:
          - name: redis-storage
            mountPath: /data
      volumes:
      - name: redis-storage
        persistentVolumeClaim:
          claimName: myredis-pvc
