k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
spec: 
   type: NodePort    
   selector:
      app: backend
   ports:
      - port: 80
        targetPort: 3001
