k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
    name: kubelab-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: /lab
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
